Make sure menu is visible in toolbar

--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -47,7 +47,7 @@
 }
 
 .graphiql-container .toolbar {
-  overflow-x: auto;
+  overflow-x: visible;
 }
 
 .graphiql-container .docExplorerShow {
